--- a/pratica-1/package.json
+++ b/pratica-1/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "restify": "^8.5.1"
   },
-  "author": "NOME MATRICULA",
+  "author": "Lucas - GEC1545",
   "license": "ISC"
 }
